# dbsconnector

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
experiments/: experiments.ipynb  sample.csv  sample.xlsx
src/dbsconnector/: databases.py
