[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires = 
    numpy
    openpyxl
    pandas
    pymongo
    PyMySQL

[options.extras_require]
testing = 
    black>=24.4.2
    flake8>=7.1.0
    pytest>=8.2.2
    mypy>=1.10.0
    tox>=3.24.4


[flake8]
max-line-length = 160
exclude = __init__.py