[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires = 
    numpy
    openpyxl
    pandas
    pymongo
    PyMySQL

[options.extras_require]
testing = 
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.24.4
    black>=22.8.0

[options.package_data]
DataBase-Connect=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py